--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
     platform: amd64_x86
     qt: msvc2017_64
 build_script:
-- cmd: call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - set QTDIR=C:\Qt\5.12.4\msvc2017_64
   - set PATH=%PATH%;%QTDIR%\bin;
   - mkdir build
@@ -14,9 +14,9 @@ build_script:
   - cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release ..
   - cmake --build . --target install
 artifacts:
-- path: bin
-  name: qt5_ci_test_win_amd64
+  - path: bin
+    name: qt5_ci_test_win_amd64
 deploy:
-- provider: GitHub
-  auth_token: $(Token)
-  description: "qt5 ci test"
+  - provider: GitHub
+    auth_token: $(Token)
+    description: "qt5 ci test"
