--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,15 @@ script:
   - cmake --build . --target install
 
 before_deploy:
-  - cd ../bin
-  - tar -zcvf qt5_ci_test_ubuntu_x86_64.tar.gz *
   - cd ..
+  - LatestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
+  - cd bin
+  - tar -zcvf qt5_ci_test-$LatestTag-linux-x86_64.tar.gz
 
 deploy:
   provider: releases
   api_key: $Token
-  file: bin/qt5_ci_test_ubuntu_x86_64.tar.gz
+  file: bin/qt5_ci_test-$LatestTag-linux-x86_64.tar.gz
   skip_cleanup: true
   on:
-    all_branches: true
+    tags: true
