--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_deploy:
   - LatestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
   - echo "$LatestTag"
   - cd bin
-  - tar -zcvf "qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz"
+  - tar -zcvf "qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz" *
 
 deploy:
   provider: releases
