--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
 #  - cmake --build . --target install
 
 script:
-  if [[$TARGET == "system-qt5-linux"]]; then export QT_SELECT=qt5 &&  cmake -H. -Bbuild && cmake --build build --target install;
+  if [[ $TARGET == "system-qt5-linux" ]]; then export QT_SELECT=qt5 &&  cmake -H. -Bbuild && cmake --build build --target install;
   elif [[ $TARGET == "custom-qt4-windows" ]]; then cmake -H. -Bbuild && cmake --build build --target install;
   fi
 
@@ -35,13 +35,13 @@ before_deploy:
   - LatestTag=$(git describe --tags `git rev-list --tags --max-count=1`)
   - echo "$LatestTag"
   - cd bin
-  - tar -zcvf qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz *
+  - tar -zcvf ../qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz *
   - cd ..
 
 deploy:
   provider: releases
   api_key: $Token
-  file: bin/qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz
+  file: qt5_ci_test-${LatestTag}-linux-x86_64.tar.gz
   skip_cleanup: true
   on:
     tags: true
