--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -57,8 +57,8 @@ jobs:
           vc_arch: ${{ matrix.msvc_arch }}
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
-          qmake
-          nmake
+          cmake -H. -Bbuild -G "NMake Makefiles"
+          cmake --build build --target install
       # tag 打包
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
